src/objects/Disposition_Section__c.object
<CustomObject>
    <description>Future</description>
    <fields>
        <fullName>Assigned_Disposition_Qty__c</fullName>
        <label>Assigned Disposition Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Role__c</fullName>
        <label>Assigned Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dispositions_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dispositions_Section1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Comment__c</fullName>
        <label>Completion Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition_Instruction__c</fullName>
        <label>Disposition Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disposition_Type_Status__c</fullName>
        <label>Disposition Type Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disposition_Type__c</fullName>
        <label>Disposition Type</label>
        <picklist>
            <picklistValues>
                <fullName>REWORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCRAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USE AS IS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Task__c</fullName>
        <label>General Task</label>
        <referenceTo>General_Task__c</referenceTo>
        <relationshipLabel>Dispositions Section</relationshipLabel>
        <relationshipName>Dispositions_Section</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Disposition Section</label>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>Disposition Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispositions Section</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>